// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createOneofUnionTypeCode > google-protobuf > 'generates code for a simple oneof uni…' 1`] = `
"import { unionType } from "nexus";

export const OneofParentRequiredOneofMembers = unionType({
  "name": "OneofParentRequiredOneofMembers",
  "description": "Required. disallow not_set.",
  "definition": (t) => {
    t.members(OneofMemberMessage1, OneofMemberMessage2);
  },
  "extensions": {
    "protobufOneof": {
      "fullName": "testapis.oneof.OneofParent.required_oneof_members",
      "name": "required_oneof_members",
      "messageName": "OneofParent",
      "package": "testapis.oneof",
      "fields": [{ "name": "required_message1", "type": "testapis.oneof.OneofMemberMessage1" }, {
        "name": "required_message2",
        "type": "testapis.oneof.OneofMemberMessage2",
      }],
    },
  },
});
"
`;

exports[`createOneofUnionTypeCode > google-protobuf > 'generates code for import squashed un…' 1`] = `
"import { unionType } from "nexus";

export const SquashedOneof = unionType({
  "name": "SquashedOneof",
  "definition": (t) => {
    t.members(OneofMessage1);
  },
  "extensions": {
    "protobufOneof": {
      "fullName": "testapis.edgecases.import_squashed_union.pkg1.SquashedOneof",
      "name": "SquashedOneof",
      "package": "testapis.edgecases.import_squashed_union.pkg1",
      "fields": [{
        "name": "msg1",
        "type": "testapis.edgecases.import_squashed_union.pkg1.OneofMessage1",
        "options": { "[graphql.object_type]": { "squashUnion": true } },
      }],
    },
  },
});
"
`;

exports[`createOneofUnionTypeCode > google-protobuf > 'generates code for optional oneof uni…' 1`] = `
"import { unionType } from "nexus";

export const OneofParentOptionalOneofMembers = unionType({
  "name": "OneofParentOptionalOneofMembers",
  "definition": (t) => {
    t.members(OneofMemberMessage1, OneofMemberMessage2);
  },
  "extensions": {
    "protobufOneof": {
      "fullName": "testapis.oneof.OneofParent.optional_oneof_members",
      "name": "optional_oneof_members",
      "messageName": "OneofParent",
      "package": "testapis.oneof",
      "fields": [{ "name": "optoinal_message1", "type": "testapis.oneof.OneofMemberMessage1" }, {
        "name": "optoinal_message2",
        "type": "testapis.oneof.OneofMemberMessage2",
      }],
    },
  },
});
"
`;

exports[`createOneofUnionTypeCode > protobufjs > 'generates code for a simple oneof uni…' 1`] = `
"import { unionType } from "nexus";

export const OneofParentRequiredOneofMembers = unionType({
  "name": "OneofParentRequiredOneofMembers",
  "description": "Required. disallow not_set.",
  "definition": (t) => {
    t.members(OneofMemberMessage1, OneofMemberMessage2);
  },
  "extensions": {
    "protobufOneof": {
      "fullName": "testapis.oneof.OneofParent.required_oneof_members",
      "name": "required_oneof_members",
      "messageName": "OneofParent",
      "package": "testapis.oneof",
      "fields": [{ "name": "required_message1", "type": "testapis.oneof.OneofMemberMessage1" }, {
        "name": "required_message2",
        "type": "testapis.oneof.OneofMemberMessage2",
      }],
    },
  },
});
"
`;

exports[`createOneofUnionTypeCode > protobufjs > 'generates code for import squashed un…' 1`] = `
"import { unionType } from "nexus";

export const SquashedOneof = unionType({
  "name": "SquashedOneof",
  "definition": (t) => {
    t.members(OneofMessage1);
  },
  "extensions": {
    "protobufOneof": {
      "fullName": "testapis.edgecases.import_squashed_union.pkg1.SquashedOneof",
      "name": "SquashedOneof",
      "package": "testapis.edgecases.import_squashed_union.pkg1",
      "fields": [{
        "name": "msg1",
        "type": "testapis.edgecases.import_squashed_union.pkg1.OneofMessage1",
        "options": { "[graphql.object_type]": { "squashUnion": true } },
      }],
    },
  },
});
"
`;

exports[`createOneofUnionTypeCode > protobufjs > 'generates code for optional oneof uni…' 1`] = `
"import { unionType } from "nexus";

export const OneofParentOptionalOneofMembers = unionType({
  "name": "OneofParentOptionalOneofMembers",
  "definition": (t) => {
    t.members(OneofMemberMessage1, OneofMemberMessage2);
  },
  "extensions": {
    "protobufOneof": {
      "fullName": "testapis.oneof.OneofParent.optional_oneof_members",
      "name": "optional_oneof_members",
      "messageName": "OneofParent",
      "package": "testapis.oneof",
      "fields": [{ "name": "optoinal_message1", "type": "testapis.oneof.OneofMemberMessage1" }, {
        "name": "optoinal_message2",
        "type": "testapis.oneof.OneofMemberMessage2",
      }],
    },
  },
});
"
`;
